Added Style and Trigger
- explicit, implicit, inherited, and dynamic style
- event trigger and style trigger

--- a/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo/View/MainPage.xaml
+++ b/XFormWebService_SqlLite_Demo/XFormWebService_SqlLite_Demo/View/MainPage.xaml
@@ -2,70 +2,181 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:XFormWebService_SqlLite_Demo;assembly=XFormWebService_SqlLite_Demo"
     x:Class="XFormWebService_SqlLite_Demo.MainPage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <!-- standard style -->
+            <Style
+                x:Key="buttonStyle"
+                TargetType="Button">
+                <Setter
+                    Property="HorizontalOptions"
+                    Value="CenterAndExpand" />
+                <Setter
+                    Property="TextColor"
+                    Value="White">
+                </Setter>
+                <Setter
+                    Property="BackgroundColor"
+                    Value="Blue">
+                </Setter>
+            </Style>
+            <Style
+                x:Key="InputLabelStyle"
+                TargetType="Label">
+                <Setter
+                    Property="TextColor"
+                    Value="Black">
+                </Setter>
+                <Setter
+                    Property="BackgroundColor"
+                    Value="White">
+                </Setter>
+                <Setter
+                    Property="WidthRequest"
+                    Value="130" />
+            </Style>
+            <Style
+                x:Key="DefaultLabelStyle"
+                TargetType="Label">
+                <Setter
+                    Property="WidthRequest"
+                    Value="130" />
+                <Setter
+                    Property="TextColor"
+                    Value="Green" />
+                <Setter
+                    Property="FontSize"
+                    Value="20" />
+            </Style>
+            <!-- implicit style -->
+            <Style
+                TargetType="Label"
+                BasedOn="{StaticResource DefaultLabelStyle}">
+                <Setter
+                    Property="FontAttributes"
+                    Value="Bold" />
+            </Style>
+            <Style
+                TargetType="Entry">
+                <Setter
+                    Property="WidthRequest"
+                    Value="150" />
+                <Style.Triggers>
+                    <Trigger
+                        Property="Entry.IsFocused"
+                        Value="true"
+                        TargetType="Entry">
+                        <Setter
+                            Property="Entry.TextColor"
+                            Value="Gray" />
+                    </Trigger>
+                    <EventTrigger
+                        Event="TextChanged">
+                        <local:ValidateInputInteger_Trigger />
+                    </EventTrigger>
+                </Style.Triggers>
+            </Style>
+            <!-- inherited style -->
+            <Style
+                x:Key="TimeLabelStyle"
+                TargetType="Label"
+                BasedOn="{StaticResource InputLabelStyle}">
+                <Setter
+                    Property="TextColor"
+                    Value="Red">
+                </Setter>
+            </Style>
+            <!-- dynamic style -->
+            <x:String
+                x:Key="CurrentTime">
+            </x:String>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout
-            Padding="30">
+            Padding="30"
+            Orientation="Vertical"
+            HorizontalOptions="FillAndExpand">
             <StackLayout
                 Orientation="Horizontal">
                 <Label
                     Text="Latitude"
-                    WidthRequest="130" />
+                    Style="{StaticResource InputLabelStyle}" />
                 <Entry
-                    x:Name="Latitude"
-                    WidthRequest="150" />
+                    x:Name="Latitude" />
             </StackLayout>
             <StackLayout
                 Orientation="Horizontal">
                 <Label
                     Text="Longitude"
-                    WidthRequest="130" />
+                    Style="{StaticResource InputLabelStyle}" />
                 <Entry
-                    x:Name="Longitude"
-                    WidthRequest="150" />
+                    x:Name="Longitude" />
             </StackLayout>
             <Button
+                Style="{StaticResource buttonStyle}"
                 x:Name="Search"
                 Clicked="OnClicked"
                 WidthRequest="75"
-                Text="Search"
-                TextColor="White"
-                BackgroundColor="Blue" />
+                Text="Search" />
             <StackLayout
                 Orientation="Horizontal">
                 <Label
-                    Text="Location"
-                    TextColor="Green"
-                    WidthRequest="130" />
+                    Text="Location" />
                 <Label
-                    Text="{Binding StationName}" />
+                    Text="{Binding StationName}"
+                    Style="{StaticResource DefaultLabelStyle}" />
             </StackLayout>
             <StackLayout
                 Orientation="Horizontal">
                 <Label
-                    Text="Elevation"
-                    TextColor="Green"
-                    WidthRequest="130" />
+                    Text="Elevation" />
                 <Label
-                    Text="{Binding Elevation}" />
+                    Text="{Binding Elevation}"
+                    Style="{StaticResource DefaultLabelStyle}" />
             </StackLayout>
             <StackLayout
                 Orientation="Horizontal">
                 <Label
-                    Text="Temperature"
-                    TextColor="Green"
-                    WidthRequest="130" />
+                    Text="Temperature" />
                 <Label
-                    Text="{Binding Temperature}" />
+                    Text="{Binding Temperature}"
+                    Style="{StaticResource DefaultLabelStyle}" />
             </StackLayout>
             <StackLayout
                 Orientation="Horizontal">
                 <Label
-                    Text="Humidity"
-                    TextColor="Green"
-                    WidthRequest="130" />
+                    Text="Humidity" />
                 <Label
-                    Text="{Binding Humidity}" />
+                    Text="{Binding Humidity}"
+                    Style="{StaticResource DefaultLabelStyle}" />
+            </StackLayout>
+            <StackLayout
+                Orientation="Horizontal">
+                <Label
+                    Text="Current Time"
+                    Style="{StaticResource TimeLabelStyle}" />
+                <Label
+                    Text="{DynamicResource CurrentTime}"
+                    TextColor="Black"
+                    Style="{StaticResource TimeLabelStyle}" />
+            </StackLayout>
+            <StackLayout
+                Orientation="Vertical"
+                HorizontalOptions="FillAndExpand">
+                <Label
+                    Text="Click the button below to show all local SQLite entries"
+                    WidthRequest="400"
+                    HorizontalOptions="CenterAndExpand" />
+                <Button
+                    Style="{StaticResource buttonStyle}"
+                    x:Name="ShowAll"
+                    Clicked="OnShowAllClicked"
+                    HorizontalOptions="CenterAndExpand"
+                    WidthRequest="200"
+                    Text="Show All" />
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
